# ncprocess

./: .gitignore  MANIFEST.in  README.md  docker-compose.yml  setup.cfg  setup.py
docker/ncprocess/: Dockerfile  api_entrypoint.sh  celery_entrypoint.sh  flower_entrypoint.sh
ncprocess/: __init__.py  main.py  requirements.txt  worker.py
ncprocess/api/: auth.py  celery_task.py  download.py  search.py  sse.py
ncprocess/models/: datamodel.py
ncprocess/redis_data/: redis-stack.conf  redis.conf
ncprocess/redis_data/data/: dump.rdb
ncprocess/static/: search.css  search.js  task_result_template.html
ncprocess/static/css/: error.css  search.css
ncprocess/static/js/: search.js
ncprocess/templates/: _base.html  download.html  error.html  expired.html  search copy.html  search.html  stream.html  task_result_template.html
ncprocess/templates/shared/: base.html  layout.html
ncprocess/tests/: conftest.py  test_tasks.py
