[metadata]
name = ncprocess
version = attr: ncprocess.__version__
author = MET Norway
author_email = servicedesk@met.no
description = fastapi API to asynchronously process netcdf file using celery cluster 
url = https://github.com/epinux/ncprocess
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
project_urls =
    Source Code = https://github.com/epinux/mcprocess

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
install_requires =
    aiofiles
    celery
    fastapi
    flower
    Jinja2
    pytest
    redis>=4.2.0rc1
    requests
    uvicorn
    httpx
    # ADDEDD
    pydantic
    starlette
    bokeh
    itsdangerous
    # aioredis
    redisearch
    jsonschema
    asyncer
    fastapi-plugins
    sse-starlette
    pandas
    dask
    scipy
    bottleneck
    numbagg
    netcdf4
    nc-time-axis
    sparse
    pint
    xarray[complete]
    python-jose
    passlib
    python-multipart
    bcrypt

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99